# whakapai

./: .gitignore  README.md  bpu.sh  lbi.sh
matumizi/: README.md  requirements.txt  setup.cfg
matumizi/config/: mcamp.properties
matumizi/docs/: info_theory_based_feat_sel_tutorial.txt  real_time_concept_drift_det_tutorial.txt  stock_portfolio_balancing_with_mc_simulation_tutorial.txt
matumizi/examples/: fesel.py  mcamp.py  mcolapse.py  pobal.py  sdriftd.py
matumizi/matumizi/: daexp.py  mcsim.py  mlutil.py  sampler.py  sdrift.py  stats.py  udrift.py  util.py
matumizi/resources/: spdata.txt
qinisa/: README.md  requirements.txt  setup.cfg
qinisa/docs/: ad_placement_with_contextual_bandit_tutorial.txt  inven_replen_with_qlearn_tutorial.txt  inven_replen_with_sarsa_tutorial.txt  pricing_policy_evaluation_td_learning_tutorial.txt  robot_navigation_learning_with_implicit_reward_tutorial.txt  route_planning_with_dynaq_tutorial.txt
qinisa/examples/: adpl.py  difare.py  emcamp.py  invrepl.py  navigate.py  wfsched.py
qinisa/qinisa/: bandit.py  cmab.py  mab.py  reinfl.py  rlba.py
torvik/: README.md  requirements.txt  setup.cfg
torvik/config/: ae_ticket.properties  fftn_col.properties  gcn_em.properties  nntuner_mafault.properties  nntuner_retail.properties  tnn_col.properties  tnn_countfl.properties  tnn_lo.properties  tnn_mafault.properties  tsgen_mach.properties  vae_maa.properties
torvik/docs/: ab_test_simulation_with_counterfactual_tutorial.txt  ae_based_cust_svc_case_anomaly_det_tutorial.txt  column_type_identification_with_contrastive_learning_tutorial.txt  discovering_experts_from_email_data_with_gcn_tutorial.txt  ffnn_config_explanation.txt  loan_approval_with_ffn_tutorial.txt  machinary_vib_data_anomaly_det_with_vae_tutorial.txt  viral_infection_prediction_with_lstm_tutorial.txt
torvik/examples/: colid.py  ctrace.py  emcom.py  loan_approve.py  maa.py  mcamp.py  ticket.py  tsgen.py
torvik/torvik/: ae.py  ffntuner.py  fftn.py  gcn.py  lstm.py  nntuner.py  tnn.py  trform.py  vae.py
zaman/: README.md  requirements.txt  setup.cfg
zaman/config/: dcmpnet_retail.properties  proph_fcast.properties  tnn_mafault.properties  tnn_ret_remain.properties  tnn_ret_trend.properties  tsano_mach_fault.properties  tsano_mc_ecg.properties  tsgen_cscalls.properties  tsgen_dem.properties  tsgen_ecg.properties  tsgen_gear.properties  tsgen_mach_fault.properties  tsgen_mach_fault_ano.properties  tsgen_ret.properties  tsgen_test.properties  tsgen_test_pow.properties
zaman/docs/: anomaly_det_with_mc_tutorial.txt  anomaly_detect_config_readme.txt  anomaly_detect_with_histogram_tutorial.txt  dcmpnet_config_readme.txt  mc_anomaly_config_readme.txt  time_series_data_gen_tutorial.txt  timeseries_classif_with_interval_stats_tutorial.txt  ts_explore_wavelet_tutorial.txt  ts_forecasting_with_decomposition_and_dual_mlp_tutorial.txt  (+1 more)
(+42 files in other folders)
