[metadata]
name = matumizi
version = 0.0.1
author = Pranab Ghosh
author_email = pkghosh99@gmail.com
description = Various utilities for Data Science
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pranab/whakapai/tree/master/matumizi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True