[metadata]
name = qinisa
version = 0.0.5
author = Pranab Ghosh
author_email = pkghosh99@gmail.com
description = Reinforcement Learning and Multi Arm Bandit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pranab/whakapai/tree/master/qinisa
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True